--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,13 +1,13 @@
-name: learn-github-actions
+name: build
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [ push ]
 jobs:
-  check-bats-version:
+  build-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          node-version: '18.17.1'
+      - run: npm ci
+      - run: npm run tauri build
