--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,5 @@
 name: build
-run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: Build Workflow
 on: [ push ]
 jobs:
   build-ubuntu:
@@ -9,5 +9,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.17.1'
+      - run: apt update
+      - run: apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       - run: npm ci
       - run: npm run tauri build
