--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,12 @@ jobs:
       - run: sudo apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       - run: npm ci
       - run: npm run tauri build
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.1'
+      - run: npm ci
+      - run: npm run tauri build
