--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
       - run: sudo apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       - run: npm ci
       - run: npm run tauri build
+      - uses: actions/upload-artifact@v4
+        if: ${{ always() && steps.build.outcome == 'success' }}
+        with:
+          if-no-files-found: error
+          name: ${{ matrix.platform.artifact }}
+          path: src-tauri/target/release/bundle/**/sani-media-viewer*
   build-windows:
     runs-on: windows-latest
     steps:
@@ -22,3 +28,9 @@ jobs:
           node-version: '20.11.1'
       - run: npm ci
       - run: npm run tauri build
+      - uses: actions/upload-artifact@v4
+        if: ${{ always() && steps.build.outcome == 'success' }}
+        with:
+          if-no-files-found: error
+          name: ${{ matrix.platform.artifact }}
+          path: src-tauri/target/release/bundle/**/sani-media-viewer*
