--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - run: sudo apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       - run: npm ci
       - run: npm run tauri build
+        id: build
       - uses: actions/upload-artifact@v4
         if: ${{ always() && steps.build.outcome == 'success' }}
         with:
@@ -28,6 +29,7 @@ jobs:
           node-version: '20.11.1'
       - run: npm ci
       - run: npm run tauri build
+        id: build
       - uses: actions/upload-artifact@v4
         if: ${{ always() && steps.build.outcome == 'success' }}
         with:
