--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.11.1'
-      - run: sudo apt update
+      - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
-      - run: sudo apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
-        if: matrix.platform == 'ubuntu-20.04'
-      - run: npm ci
+        run: |
+          sudo apt update
+          sudo apt install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev
+      - name: Install frontend dependencies
+        run: npm ci
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
