--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ sha2 = "0.10.8"
 dunce = "1.0.4"
 dotenv = "0.15.0"
 env_logger = "0.11.2"
+num_cpus = "1.16.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
